lnet/klnds/o2iblnd/o2iblnd_cb.c
@@ -3341,10 +3341,10 @@ kiblnd_cm_callback(struct rdma_cm_id *cmid, struct rdma_cm_event *event)
 
 	case RDMA_CM_EVENT_UNREACHABLE:
 		conn = cmid->context;
-		CNETERR("%s: UNREACHABLE %d cm_id %p conn %p\n",
-			libcfs_nid2str(conn->ibc_peer->ibp_nid), event->status, cmid, conn);
-		LASSERT(conn->ibc_state != IBLND_CONN_ESTABLISHED &&
-			conn->ibc_state != IBLND_CONN_INIT);
+		CNETERR("%s: UNREACHABLE %d cm_id %p conn %p ibc_state: %d\n",
+			libcfs_nid2str(conn->ibc_peer->ibp_nid),
+			event->status, cmid, conn, conn->ibc_state);
+		LASSERT(conn->ibc_state != IBLND_CONN_INIT);
 		if (conn->ibc_state == IBLND_CONN_ACTIVE_CONNECT ||
 		    conn->ibc_state == IBLND_CONN_PASSIVE_WAIT) {
 			kiblnd_connreq_done(conn, -ENETDOWN);
